[gd_scene load_steps=16 format=2]

[ext_resource path="res://Area.gd" type="Script" id=1]
[ext_resource path="res://ControllerScript.gd" type="Script" id=2]
[ext_resource path="res://models/super_white.material" type="Material" id=3]
[ext_resource path="res://models/green_material.tres" type="Material" id=4]
[ext_resource path="res://audio/hand_hit.wav" type="AudioStream" id=5]
[ext_resource path="res://models/red_material.tres" type="Material" id=6]
[ext_resource path="res://left_hand_model.tscn" type="PackedScene" id=7]
[ext_resource path="res://forearm_model.tscn" type="PackedScene" id=8]
[ext_resource path="res://hand_left.tscn" type="PackedScene" id=9]
[ext_resource path="res://audio/low_impact.wav" type="AudioStream" id=10]
[ext_resource path="res://MultiplayerRoom/RemoteSpatial.gd" type="Script" id=11]
[ext_resource path="res://scenes/AdvancedBallModel.tscn" type="PackedScene" id=12]

[sub_resource type="SphereShape" id=1]
margin = 0.001

[sub_resource type="SphereMesh" id=2]

[sub_resource type="SphereMesh" id=3]
radius = 0.025
height = 0.05
radial_segments = 16
rings = 8

[node name="left_controller" type="ARVRController"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 1.6, 0 )
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.5, -0.866025, 0, 0.866025, 0.5, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 0.1, -3.72529e-09, 0, 3.72529e-09, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
shape = SubResource( 1 )

[node name="handle_ball" parent="Area/CollisionShape" instance=ExtResource( 12 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
color = Color( 0.85098, 0, 0, 1 )

[node name="Spatial" parent="Area" instance=ExtResource( 9 )]
transform = Transform( -0.2, -1.49012e-08, -3.01992e-08, -1.49012e-08, 0.2, 0, 3.01992e-08, 0, -0.2, 1.19209e-07, 0.022, 0.09 )
visible = false

[node name="hit_player" type="AudioStreamPlayer" parent="Area"]
stream = ExtResource( 5 )
volume_db = -2.5

[node name="good_hit" type="MeshInstance" parent="Area"]
transform = Transform( 0.05, 0.0866026, 0, -0.0866026, 0.05, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = ExtResource( 4 )

[node name="bad_hit" type="MeshInstance" parent="Area"]
transform = Transform( 0.05, 0.0866026, 0, -0.0866026, 0.05, 0, 0, 0, 0.1, 0, 0, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = ExtResource( 6 )

[node name="hand_model" parent="Area" instance=ExtResource( 7 )]
transform = Transform( 0.5, 0.866026, 0, -0.866026, 0.5, 0, 0, 0, 1, 0, 0, 0 )

[node name="forearm" parent="Area/hand_model" instance=ExtResource( 8 )]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.288121, 1.19209e-07, 0 )
visible = false

[node name="rumble_audio" type="AudioStreamPlayer" parent="Area"]
stream = ExtResource( 10 )
volume_db = -14.0
pitch_scale = 0.3
bus = "Left"

[node name="RumbleTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="CenterMarker" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 3 )
material/0 = ExtResource( 3 )

[node name="RemoteSpatial" type="Spatial" parent="."]
script = ExtResource( 11 )
is_local = true
transform_parent = true
node_type = "controller"

[connection signal="body_entered" from="Area" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="Area" method="_on_Area_body_exited"]
[connection signal="body_entered" from="Area/hand_model" to="Area" method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area/hand_model" to="Area" method="_on_Area_body_exited"]
[connection signal="timeout" from="RumbleTimer" to="." method="_on_RumbleTimer_timeout"]
